Trying to fix  a gap that appears in safari and chromium.

--- a/style.scss
+++ b/style.scss
@@ -870,6 +870,7 @@ img {
         }
 
         main {
+            background-color: white;
             width: 112.5rem;
         }
 
